--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "Ben Booth <bkbooth@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^6.0.0"
+    "apollo-server": "^2.0.7",
+    "apollo-server-express": "^2.0.6",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "graphql": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
