--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "graphql": "^14.0.0",
+    "pg": "^7.6.0",
+    "sequelize": "^4.41.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
