--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "apollo-server": "^2.0.7",
     "apollo-server-express": "^2.0.6",
+    "bcrypt": "^3.0.2",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "graphql": "^14.0.0",
+    "jsonwebtoken": "^8.3.0",
     "pg": "^7.6.0",
     "sequelize": "^4.41.0",
     "uuid": "^3.3.2"
