--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server-express": "^2.0.6",
     "bcrypt": "^3.0.2",
     "cors": "^2.8.4",
+    "dataloader": "^1.4.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "graphql": "^14.0.0",
